crates/rspack_error/tests/fixtures/ts_syntax_error/fixtures__ts_syntax_error.snap
---
source: crates/rspack_error/tests/fixtures.rs
assertion_line: 38
expression: ts_syntax_error
---
error: Typescript parsing error
  ┌─ tests/fixtures/ts_syntax_error/index.ts:5:5
  │
5 │     g = CONST
  │     ^ Expected ',', got 'g'


